--- a/video/video.css
+++ b/video/video.css
@@ -326,6 +326,9 @@ nav {
 .comments-section h3{
     font-size: 20px;
 }
+.comments-section h3 span{
+    font-size: 20px;
+}
 .comments-section span{
     font-size: 16px;
 }
