--- a/home/styles.css
+++ b/home/styles.css
@@ -128,6 +128,16 @@ nav{
   cursor: pointer;
   border-radius: 10px;
 }
+.profile-pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+  padding: 10px;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
 .main-div {
 
   background-color: var(--bgcolor);
